feat: mdx integration

--- a/src/content/portfolio/tutur.mdx
+++ b/src/content/portfolio/tutur.mdx
@@ -8,6 +8,8 @@ tags:
 thumbnail: /content/portfolio/tutur/recognition.gif
 ---
 
+import Video from '@components/markdown/Video.astro';
+
 > Tutur mendapatkan juara 1 di INTENTION IFEST UNPAD 2022
 
 # Features (and What I've Done)
@@ -15,6 +17,11 @@ thumbnail: /content/portfolio/tutur/recognition.gif
 ## Recognition ⭐
 
 ![Dictionary](/content/portfolio/tutur/recognition.webm 'arti bahasa isyarat: perkenalkan nama saya lutfi')
+
+<Video
+  src="/content/portfolio/tutur/recognition.webm"
+  title="arti bahasa isyarat: perkenalkan nama saya lutfi"
+/>
 
 Fitur ini mengambil video dari webcam dan akan diterjemahkan dadi BISINDO ke Bahasa Indonesia. Hal yang menarik di sini adalah Machine Learning yang kami kembangkan **mendeteksi gesture, tidak hanya gambar**. Namun, performa dari Machine Learning yang kami gunakan masih belum terlalu bagus dan bisa dibilang memiliki banyak noise.
 
@@ -56,12 +63,16 @@ Fitur ini memberikan input teks ke user, lalu akan diubah menjadi rangkaian vide
 # Presentation
 
 <div class="video-wrapper">
-  <iframe src="https://www.youtube.com/embed/W5K7v6cJqBY?si=yuQUhb-5Wp83rI65&amp;start=3630" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe
+    src="https://www.youtube.com/embed/W5K7v6cJqBY?si=yuQUhb-5Wp83rI65&amp;start=3630"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+  ></iframe>
 </div>
 
 > Tutur - Help Communicate for Better Future!
-
-<!-- def -->
 
 [aulia nur fajriyah]: https://www.linkedin.com/in/aulianurfajriyah
 [daniyal kautsar]: https://www.linkedin.com/in/mdaniyalk
